--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "J.B.",
   "license": "MIT",
   "dependencies": {
+    "bootstrap-scss": "^4.1.3",
     "jquery": "^3.3.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1"
